[gd_scene load_steps=9 format=3 uid="uid://bocnscn2kxeon"]

[ext_resource type="Theme" uid="uid://pn8tudlpqcyc" path="res://game_ui_theme.tres" id="1_p3r35"]
[ext_resource type="Script" path="res://objects/ui_canvas_layer/hotbar_panel_container.gd" id="2_dxr6g"]
[ext_resource type="Texture2D" uid="uid://bkv53svq3e1in" path="res://objects/ui_canvas_layer/highlight.png" id="3_2owqa"]
[ext_resource type="Script" path="res://objects/ui_canvas_layer/start_battle_button.gd" id="4_62fux"]
[ext_resource type="Script" path="res://objects/ui_canvas_layer/clock.gd" id="5_a6p7n"]
[ext_resource type="Texture2D" uid="uid://dkic6doc52oby" path="res://icon.png" id="5_vbo1d"]
[ext_resource type="Texture2D" uid="uid://cvpdalfh22x7a" path="res://objects/ui_canvas_layer/clock.png" id="7_0jdgk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y87ti"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.814742, 0.522822, 0.223638, 1)

[node name="UICanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_p3r35")

[node name="Clock" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -48.0
offset_right = 80.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("5_a6p7n")

[node name="Bg" type="TextureRect" parent="Control/Clock"]
layout_mode = 2
texture = ExtResource("7_0jdgk")

[node name="Sun" type="Sprite2D" parent="Control/Clock"]
texture = ExtResource("5_vbo1d")

[node name="HotbarPanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -20.0
offset_right = 55.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_y87ti")
script = ExtResource("2_dxr6g")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HotbarPanelContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ColorRect" type="ColorRect" parent="Control/HotbarPanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="Control/HotbarPanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="Control/HotbarPanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="ColorRect4" type="ColorRect" parent="Control/HotbarPanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="ColorRect5" type="ColorRect" parent="Control/HotbarPanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="ColorRect6" type="ColorRect" parent="Control/HotbarPanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Hightlight" type="Sprite2D" parent="Control/HotbarPanelContainer"]
position = Vector2(10, 10)
texture = ExtResource("3_2owqa")

[node name="StartBattleButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 447.0
offset_top = 283.0
offset_right = 526.0
offset_bottom = 303.0
text = "START BATTLE"
script = ExtResource("4_62fux")
